2048_Module/classic/compiling_error.txt
In file included from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/Board.hpp:7:0,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/Game.hpp:5,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/Module_2048.hpp:5,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/Playclassic.hpp:1,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/Playclassic.cpp:1:
/home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/../Exceptions/NotwellformedBoard.hpp:17:1: error: expected ‘;’ after class definition
 }
 ^
/home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/../Exceptions/NotwellformedBoard.hpp: In member function ‘char* NotwellformedBoard::how() const’:
/home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/../Exceptions/NotwellformedBoard.hpp:12:30: error: invalid operands of types ‘const char*’ and ‘const char [16]’ to binary ‘operator+’
      return "x value = " + x + " AND y value = " + y;
             ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
In file included from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/Board.hpp:26:0,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/Game.hpp:5,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/Module_2048.hpp:5,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/Playclassic.hpp:1,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/Playclassic.cpp:1:
/home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/Board.cpp: In instantiation of ‘Board<T>::Board(int, int) [with T = int]’:
/home/rached/C++/Simple-Framework/2048_Module/classic/../lib/Module_2048.cpp:1:88:   required from here
/home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/Board.cpp:8:11: error: ‘NotwellformedBoard::NotwellformedBoard(int, int)’ is private within this context
     throw NotwellformedBoard(matrix_length_x,matrix_length_y);
           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/Board.hpp:7:0,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/Game.hpp:5,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/../lib/Module_2048.hpp:5,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/Playclassic.hpp:1,
                 from /home/rached/C++/Simple-Framework/2048_Module/classic/Playclassic.cpp:1:
/home/rached/C++/Simple-Framework/2048_Module/classic/../lib/../../Framework/../Exceptions/NotwellformedBoard.hpp:6:3: note: declared private here
   NotwellformedBoard(int a,int b):x(a),y(b){}
   ^~~~~~~~~~~~~~~~~~
